# operator-academy

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
public/: manifest.webmanifest  service-worker.js
src/: App.tsx  firebaseClient.ts  main.tsx  storage.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/data/: curriculumSeed.ts
