[package]
name = "operator-academy"
version = "0.1.0"
description = "Local-first executive development desktop application"
authors = ["Operator Academy"]
edition = "2021"

[lib]
name = "operator_academy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.0", features = [] }
tauri-plugin-sql = { version = "2.2.0", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
